--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
 TODO (organized by priority):
 
-* fix room functions in server
 * handle socket errors
-* find way to delete empty rooms
-* clean up CSS, remove excessive classes 
+* clean up CSS, remove excessive classes (in progress)
 * redirect non-players who click the link to the join screen
