--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 TODO (organized by priority):
 
+* continue modularizing css in lobby, figure out how to integrate bootstrap
 * clean up CSS, remove excessive classes (in progress)
 * handle socket errors
 * redirect non-players who click the link to the join screen
